--- a/less/variables.less
+++ b/less/variables.less
@@ -45,6 +45,106 @@
   background-size: cover;
 }
 
+// Section 1
+
+.happily-married {
+  height: 420px;
+  margin: 0 0 80px 28px;
+}
+
+// Media Queries
+// Mobile Only
+// Hero
+  .navbar-brand {
+    float: none !important;
+    @media (min-width: @screen-sm-min) {
+      float: left;
+  }}
+
+  .logo-header {
+  margin: auto;
+  text-align: center;
+  @media (min-width: @screen-sm-min) {
+    margin: none;
+  text-align: left;
+  }}
+
+#hero {
+  form {
+    width: 72%;
+    text-align: center;
+    margin: auto;
+    @media (min-width: @screen-sm-min) {
+      width: 100%;
+      text-align: center;
+      margin: auto;
+    }
+  }
+
+  h1,
+  h4 {
+    text-align: center !important;
+    @media (min-width: @screen-sm-min) {
+      text-align: left !important;
+  }}
+
+
+
+  div,
+  .btn-caption {
+    text-align: center !important;
+    @media (min-width: @screen-sm-min) {
+      text-align: left !important;
+  }}
+}
+
+
+
+//Footer
+.pricing-box {
+  padding: 42px !important;
+  @media (min-width: @screen-sm-min) {
+    padding: 20px !important;
+}}
+
+.list-features {
+  text-align: center;
+  @media (min-width: @screen-sm-min) {
+    text-align: left;
+}}
+
+.price-head-row {
+  margin: 60px auto 0;
+  @media (min-width: @screen-sm-min) {
+    margin: 60px auto;
+  }
+}
+
+.pricing-head {
+  width: 72%;
+  text-align: center;
+  margin: auto;
+  @media (min-width: @screen-sm-min) {
+    width: inherit;
+    text-align: inherit;
+    margin: inherit;
+  }
+}
+
+.narrow {
+  margin: 20px 20px 40px 20px;
+  @media (min-width: @screen-sm-min) {
+    margin: 80px 80px 40px 80px;
+  }
+}
+
+
+
+
+// .navbar-brand {
+//     float: right !important;
+// }
+
 // @media (min-width: 768px)
 // .navbar-nav {
 //     float: left;
