--- a/less/variables.less
+++ b/less/variables.less
@@ -81,6 +81,13 @@
     }
   }
 
+  .hero-hr {
+    width: 25%;
+    @media (min-width: @screen-sm-min) {
+      width: 50%;
+    }
+  }
+
   h1,
   h4 {
     text-align: center !important;
