tied forms into Nimble

--- a/less/variables.less
+++ b/less/variables.less
@@ -231,6 +231,21 @@ div>
 
 
 
+// Modal Styles
+
+// #submodal {
+//   width: 100%;
+//   height: 100%;
+//   display: table;
+// }
+//
+// .modal-dialog {
+//   vertical-align: middle;
+//   display: table-cell;
+//   padding: 0 22px;
+// }
+
+
 // Boostrap Defaul Vars
 
 // icons
