Added vertical alignment for Modal

--- a/less/variables-minimal.less
+++ b/less/variables-minimal.less
@@ -4,6 +4,30 @@
 // @brand-primary:        #685D9F;
 
 
+// Vertically Center Modal
+
+.vertical-alignment-helper {
+    display:table;
+    height: 100%;
+    width: 100%;
+    pointer-events:none;
+}
+.vertical-align-center {
+    /* To center vertically */
+    display: table-cell;
+    vertical-align: middle;
+    pointer-events:none;
+}
+.modal-content {
+    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+    width:inherit;
+    height:inherit;
+    /* To center horizontally */
+    margin: 0 auto;
+    pointer-events:all;
+}
+
+
 // misc typography
 @headings-font-weight: 100;
 @btn-font-weight:      300;
