--- a/less/variables.less
+++ b/less/variables.less
@@ -248,7 +248,7 @@ div>
 
 // Boostrap Defaul Vars
 
-// icons
+// Icons
 @icon-font-path: "../fonts/";
 @icon-font-name: "toolkit-entypo";
 
@@ -263,11 +263,16 @@ div>
 
 
 // Brand Colors
-@brand-primary: #288feb;
-@brand-success: #28cb75;
-@brand-info:    #48f0de; // turquoise
-@brand-warning: #f0ad4e;
-@brand-danger:  #FF3167;
+@brand-primary:         #288feb;
+@brand-primary-dark:    #2884d6;
+
+@brand-secondary:       #48f0de; // turquoise
+@brand-secondary-dark:  #3dc7cc; // turquoise
+
+@brand-success:         #28cb75;
+@brand-info:            #48f0de; // turquoise
+@brand-warning:         #f0ad4e;
+@brand-danger:          #FF3167;
 
 
 // text
