added ouibounce modal

--- a/less/variables-minimal.less
+++ b/less/variables-minimal.less
@@ -101,6 +101,10 @@ a {
     pointer-events:all;
 }
 
+#ouibounce-modal .underlay {
+  z-index: -100;
+}
+
 
 // misc typography
 @headings-font-weight: 100;
