shrunk modal to fit 13" MacBooks

--- a/less/variables-minimal.less
+++ b/less/variables-minimal.less
@@ -133,12 +133,12 @@ a {
   }
 
   .modal-gfx {
-    margin-top: 46px;
+    margin-top: 26px;
   }
 
   .modal-header {
     h2 {
-      margin: 40px 0 52px 0;
+      margin: 10px 0 32px;
     }
     ul {
       width: 80%;
