added speed analysis page w/ 50% discount bounce-modal

--- a/less/variables-minimal.less
+++ b/less/variables-minimal.less
@@ -165,6 +165,16 @@ a {
 }
 
 
+// --------------------
+// SPEED ANALYSIS PAGE
+// --------------------
+
+.questions-call {
+  padding-top: 80px;
+}
+
+
+
 // misc typography
 @headings-font-weight: 100;
 @btn-font-weight:      300;
